# ansible-mcp-server

./: .env.example  .gitignore  CLAUDE.md  CONFIG_EXAMPLES.md  Dockerfile  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  SKILLS.md  docker-compose.yml  pyproject.toml  setup-remote.sh  test_transports.py
.github/: copilot-instructions.md
.github/agents/: ansible-operator.md
.github/skills/: SKILLS.md
Docs/: ARCHITECTURE.md  CONFIG_EXAMPLES.md  IMPROVEMENTS.md  QUICK_REFERENCE.md  REMOTE_SETUP.md  SSE_IMPLEMENTATION_COMPLETE.md  SSE_SUMMARY.md  project_summary.md
docs/: DOCKER.md  project_summary.md
graphify-out/: .graphify_incremental.json  .graphify_labels.json  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
inventory/: hosts.ini
plan/: plan.md
src/ansible_mcp/: __init__.py  server.py
