[project]
name = "ansible-mcp"
version = "0.1.0"
description = "Advanced Ansible Model Context Protocol (MCP) server with playbook, role, inventory, and troubleshooting tools"
authors = [
    { name = "Vidyadhar Lambade", email = "VidyadharS_Lambade@dfci.harvard.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "PyYAML>=6.0.1",
    "typing-extensions>=4.9.0",
    "ansible-core>=2.16.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/vsl8/ansible-mcp-server"
Documentation = "https://github.com/vsl8/ansible-mcp-server#readme"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_mcp"]
